# car-cost-compare

./: CHANGELOG.md  app.py  cars.db  config.py  cost_calculator.py  eda.ipynb  main.py  models.py  pyproject.toml  setup_db.py
.streamlit/: secrets.toml
alembic/: env.py  models.py  seed.py
alembic/versions/: 7dc425a8916e_create_cars_table.py
archive/: cost_funcs.py
db/: cars.db  models.py  operations.py
eda/: eda.ipynb
