[project]
name = "car-cost-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
