[project]
name = "car-cost-compare"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "alembic>=1.17.2",
    "commitizen>=4.10.0",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pre-commit>=4.4.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "0.2.0"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
